[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.7"
cortex-a = "7.0"
spin = "0.9"
palloc = "0.1.3"
boot = { path = "../boot" }