[package]
name = "libsyscall"
version = "0.1.0"
edition = "2021"

[lib]
name = "libsyscall"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../../interface" }
spin = "0.9"
palloc = "0.1.3"